<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Islamic Prayers</string>
<string name="apr">April</string>
<string name="aug">August</string>
<string name="azan_time_format">%1$s Azan: %2$s</string>
<string name="calculation_method">Calculation method</string>
<string name="city_label">City: %s</string>
<string name="country_label">Country: %s</string>
<string name="dec">December</string>
<string name="default_gregorian_date">1. January 2000</string>
<string name="default_hijri_date">24. Ramadan 1420</string>
<string name="default_time_hm">00:00</string>
<string name="default_time_hms">00:00:00</string>
<string name="dialog_btn_no">No</string>
<string name="dialog_btn_yes">Yes</string>
<string name="dialog_update_location_message">Do you want to retake your location?</string>
<string name="dialog_update_location_title">Update Location</string>
<string name="Egypt">Egyptian General Authority of Survey</string>
<string name="Error_MissedSP">Something wrong happened!</string>
<string name="Error_noLocation">The Location isn\'t set correctly</string>
<string name="exit">Exit</string>
<string name="feb">February</string>
<string name="fetching_location">Fetching location…</string>
<string name="Hijri_1_Month">Muharram</string>
<string name="Hijri_10_Month">Shawwal</string>
<string name="Hijri_11_Month">Dhu al-Qadah</string>
<string name="Hijri_12_Month">Dhu al-Hijjah</string>
<string name="Hijri_2_Month">Safar</string>
<string name="Hijri_3_Month">Rabi-ul-awwal</string>
<string name="Hijri_4_Month">Rabi-ul-akhir</string>
<string name="Hijri_5_Month">Jumada-al-ula</string>
<string name="Hijri_6_Month">Jumada-al-akhirah</string>
<string name="Hijri_7_Month">Rajab</string>
<string name="Hijri_8_Month">Sha\'ban</string>
<string name="Hijri_9_Month">Ramadan</string>
<string name="ISNA">Islamic Society of North America (ISNA)</string>
<string name="Jafari">Ithna Ashari</string>
<string name="jan">January</string>
<string name="jul">July</string>
<string name="jun">June</string>
<string name="juristic_hanafi">Hanafi</string>
<string name="juristic_method">Juristic method</string>
<string name="juristic_shafii_standard">Shafii (standard)</string>
<string name="Karachi">University of Islamic Sciences, Karachi</string>
<string name="location_city_unavailable">City/Country unavailable</string>
<string name="location_gps_error">A GPS problem occurred.\nTry restarting the device.\nIf the problem persists, try using a proxy app.</string>
<string name="location_line_altitude">Altitude: %1$s m</string>
<string name="location_line_city">City: %1$s</string>
<string name="location_line_code">Code: %1$s</string>
<string name="location_line_country">Country: %1$s</string>
<string name="location_line_latitude">Latitude: %1$s</string>
<string name="location_line_longitude">Longitude: %1$s</string>
<string name="location_line_timezone">Timezone: %1$s</string>
<string name="location_line_utc_offset">UTC Offset: %1$s</string>
<string name="location_not_set">The location isn\'t set correctly.\nPlease try again!</string>
<string name="location_set_success">Location set!</string>
<string name="Makkah">Umm al-Qura, Makkah</string>
<string name="mar">March</string>
<string name="may">May</string>
<string name="Msg_SetLocation">Please set your location to enable the app to calculate your prayers times correctly</string>
<string name="MWL">Muslim World League (MWL)</string>
<string name="next_prayer_format">Remaining Time for %1$s is: %2$s</string>
<string name="notif_prayer_body">It\'s time for %1$s</string>
<string name="notification_prayers">Notification Prayers</string>
<string name="notifs_off">Notifications are turned off</string>
<string name="nov">November</string>
<string name="oct">October</string>
<string name="permission_location_denied_toast">Location permission denied.</string>
<string name="permission_location_granted_toast">Location permission granted.</string>
<string name="permission_location_rationale_message">Please provide location permission</string>
<string name="permission_location_rationale_title">Info</string>
<string name="permission_location_settings_message">Location access is required to calculate prayer times.</string>
<string name="permission_location_settings_title">Warning</string>
<string name="permission_notification_denied_toast">Notifications won\'t work without this permission.</string>
<string name="permission_notification_rationale_message">Please allow notification permission to receive prayer alerts.</string>
<string name="permission_notification_rationale_title">Info</string>
<string name="permission_notification_settings_title">Warning</string>
<string name="prayer_asr">Asr</string>
<string name="prayer_eshaa">Eshaa</string>
<string name="prayer_fajr">Fajr</string>
<string name="prayer_maghrib">Maghrib</string>
<string name="prayer_sunrise">Sunrise</string>
<string name="prayer_zohr">Zohr</string>
<string name="remaining_time_format">Remaining Time for %1$s is: %2$s</string>
<string name="seconds_label">sec</string>
<string name="section_date_time">Date and Time</string>
<string name="section_prayers_calculations">Prayers calculations</string>
<string name="section_prayers_notifications">Prayers notifications</string>
<string name="sep">September</string>
<string name="settings">Settings</string>
<string name="Tehran">Institute of Geophysics, University of Tehran</string>
<string name="time_12hour">12-Hour format</string>
<string name="time_24hour">24-Hour format</string>
<string name="time_auto">Auto</string>
<string name="time_format_24hour">24-hour time Format</string>
<string name="time_hms">%1$d:%2$d:%3$d</string>
<string name="time_ms">%1$d:%2$d</string>
<string name="time_s">%1$d Second(s)</string>
<string name="tomorrow_fajr">Tomorrow\'s Fajr</string>
<string name="unavailable_info">--</string>
</resources>
