<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/section_prayers_calculations"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@android:color/darker_gray" />
            <com.PRO33X.mCode.OneChoicePrefView
                android:id="@+id/calculation_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/calculation_method"
                app:prefKey="calc_method" />
            <com.PRO33X.mCode.OneChoicePrefView
                android:id="@+id/juristic_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/juristic_method"
                app:prefKey="Juristic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/section_date_time"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@android:color/darker_gray" />
            <com.PRO33X.mCode.OneChoicePrefView
                android:id="@+id/time_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/time_format_24hour"
                app:prefKey="TimeFormat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/section_prayers_notifications"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@android:color/darker_gray" />
            <com.PRO33X.mCode.MultiChoicePrefView
                android:id="@+id/notification_prayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/notification_prayers"
                app:prefKey="notif_prayers"
                app:noneSelectedText="@string/notifs_off" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>